Report: Added rough version of the Abstract.

--- a/report.tex
+++ b/report.tex
@@ -34,7 +34,13 @@
 %----------------------------------------------------
 %NAVabstract
 \begin{abstract}
-
+	Web technologies now allow distributed applications to be accessible without having to install anything more then a web browser.
+	Apart from the features from desktop applications, web applications allow people to communicate and collaborate and also untie them from any particular computer.
+	With modern web browser, interfaces are not limited to server generated web pages;
+	they are now rivals of native desktop interfaces.
+	\ac{gd} is in need of one such web application, an \ac{ide} in this case.
+	
+	In this report we will look at examples of both native and web applications and will use them as a basis for proposing a web based \ac{ide} for \ac{gd}.
 \end{abstract}
 %----------------------------------------------------
 %NAVkeywords
