Related Work: LightTable and OpenJSCAD are now children of "Moving to the Web".

--- a/report.tex
+++ b/report.tex
@@ -531,7 +531,7 @@
 	It is in this time where web browsers are so capable that it becomes possible to develop a \ac{gd} \ac{ide} for the web.
 
 %Inspiration from anything about IDEs.
-\subsection{LightTable}
+\subsubsection{LightTable}
 	LightTable is an example of a desktop application that uses Web technologies.
 	More specifically, it uses node-webkit as its runtime allowing it to use html layout engine for its user interface, to use javascript as its programming language and to use node.js\cite{tilkov2010node} modules.
 	LightTable is written in ClojureScript\cite{10.1109/MIC.2011.148}, a subset of Clojure that compiles to Javascript.
@@ -595,7 +595,7 @@
 	The \emph{Behaviors} describe how an \emph{Object} reacts when events are raised on it. \emph{Tags} are groups of \emph{Behaviors}. 
 	When an event is raised on an \emph{Object} both its \emph{Behaviors} and those from its \emph{Tags} are notified.
 
-\subsection{OpenJSCAD}
+\subsubsection{OpenJSCAD}
 	OpenJSCAD is a javascript application (or rather, an application based on web technologies).
 	It aims to provide the same functionality as OpenSCAD but using javascript as a base for its language. 
 	Most of OpenSCAD functionality is implemented in OpenJSCAD. 
