--- a/report.tex
+++ b/report.tex
@@ -714,27 +714,27 @@
 %----------------------------------------------------
 %NAVevaluation
 \section{Evaluation (1/2pgs)}
-	Evaluating such a user experience centered application cannot be done by using quantitative measures.
-	Of course that measuring the performance of parts that were identified as critical to a pleasing experience is important but this is only useful when tuning the system. 
-	To properly evaluate the result we have to use qualitative measures.
-
-	One possible measure is the number of users the system ends up serving.
-	This measure doesn't provide any insight into why the system is better than others. 
-	The number of users not only depends on the quality and usefulness of the system but also on how it is marketed. 
-	Thus, this measure doesn't seem to fit the scope of a master's thesis.
-
-	One quantitative measure that will probably be relevant is the time it takes to apply a users program to other software the user has access.
-	Measuring performance while executing a program in ``help mode'', ``apply to other software mode''. 
-	These measures would then be compared with those from other software like Rosetta and Dynamo.
-
-	On the same line of performance, it will be interesting to test how system performance scales with progressively large programs.
-	These tests will be done informally. 
-	If a stable system interface surfaces it might be possible to do the tests automatically.
-
-	It might be acceptable to present the results of the project followed by personal thoughts on what is bad, what is good and what can be done in the future.
-	Hey! This is what a description of the solution is...
-
-	%Maybe this section should state how the overall project execution will be evaluated which of course includes how to evaluate what it will produce.
+	To evaluate an \ac{ide} for \ac{gd} we will have to look at three different areas:
+	its performance, its user experience or usability and its Generative Design capability.
+	
+	\subsubsection{Performance}
+	The performance of the editing environment will be evaluated using \ac{gd} programs as benchmarks which will be run in it as well as in other systems, like Rosetta.
+	With the results of these benchmarks we can compare how does the system stand among the other in terms of running programs.
+	We can also measure its memory footprint and its performance when viewing program results.
+	
+	\subsubsection{User experience / Usability}
+	For the system to be useful its users have to be able to use it.
+	To assess that this is true we will do user testing.
+	
+	The tests will follow the line of asking users to complete a small \ac{gd} programming task followed by giving their opinion on how the usage experience went.
+	We can complement those with questionnaires on the same subject and also by recording the usage sessions (which will also allow users to pinpoint their opinions).
+	
+	Only the editing environment will be tested this way since it is the only component that is used directly by architects.
+	
+	\subsubsection{Generative Design capability}
+	The variety of results that can be made using the system are also important for its evaluation.
+	The more \ac{gd} examples it can produce the better it is suited for use in a real-world scenario.
+	A way to show how much variety of results it can make is to describe several examples that give glimpses of that variety.
 
 \subsection{Proof-of-concept Prototype}
 	A small prototype has been assembled to test the concept of a \ac{gd} environment in the browser.
