Conclusions: First version. Its parts are not connected by anything deep; the only thing that connects them is the way the report is built.

--- a/report.tex
+++ b/report.tex
@@ -800,7 +800,18 @@
 %----------------------------------------------------
 %NAVconclusions
 \section{Conclusions}
-
+	Through this report we have stated that a new \ac{ide} for \ac{gd} needs to be developed.
+	We added that such an \ac{ide} is needed because regular \ac{ide}s for software development don't fit the needs of architects and also that it needs to be in the web to allow them to have more freedom from location or machine.
+	
+	We used Impromptu, IPython, Processing, DesignScript and Rosetta as examples of \ac{ide}s that acknowledge this need and pointed them as guides for what or \ac{ide} should be.
+	To complement these examples we also referred Learnable Programming's advice on what an \ac{ide} should do.
+	
+	We support the move to the web with examples (LightTable and OpenJSCAD) that show capable applications running in the web browser.
+	
+	To present our solution, we started by decomposing the problem of an \ac{ide} for \ac{gd} and later showed its high-level view.
+	
+	We said that the evaluation will focus on performance, user experience and \ac{gd} capability of the system and also that a partial prototype was already built and demoed where architects' response was good.
+	
 %----------------------------------------------------
 %NAVappendix
 \newpage
