Evaluation: Evalution concerns turned into "paragraphs".

--- a/report.tex
+++ b/report.tex
@@ -717,12 +717,12 @@
 	To evaluate an \ac{ide} for \ac{gd} we will have to look at three different areas:
 	its performance, its user experience or usability and its Generative Design capability.
 	
-	\subsubsection{Performance}
+	\paragraph{Performance}
 	The performance of the editing environment will be evaluated using \ac{gd} programs as benchmarks which will be run in it as well as in other systems, like Rosetta.
 	With the results of these benchmarks we can compare how does the system stand among the other in terms of running programs.
 	We can also measure its memory footprint and its performance when viewing program results.
 	
-	\subsubsection{User experience / Usability}
+	\paragraph{User experience / Usability}
 	For the system to be useful its users have to be able to use it.
 	To assess that this is true we will do user testing.
 	
@@ -731,7 +731,7 @@
 	
 	Only the editing environment will be tested this way since it is the only component that is used directly by architects.
 	
-	\subsubsection{Generative Design capability}
+	\paragraph{Generative Design capability}
 	The variety of results that can be made using the system are also important for its evaluation.
 	The more \ac{gd} examples it can produce the better it is suited for use in a real-world scenario.
 	A way to show how much variety of results it can make is to describe several examples that give glimpses of that variety.
