Report: Fine tunning...

--- a/report.tex
+++ b/report.tex
@@ -165,7 +165,7 @@
 %----------------------------------------------------
 %NAVobjectives
 \subsection{Objectives (1pg)}
-	The aim of this project is to provide architects and designers interested in creating 3D models with an environment that fosters the Generative Design approach while being accessible wherever they are working.
+	The aim of this project is to provide architects and designers interested in creating 3D models with an environment that fosters the Generative Design approach while being accessible wherever there is a web browser and an internet connection.
 
 	%Why does it need to be accessible wherever the architect is?
 	Architects imagine buildings and will have to move their ideas outside of their heads wherever they are; if they don't, they might forget them forever. 
@@ -717,11 +717,6 @@
 	To evaluate an \ac{ide} for \ac{gd} we will have to look at three different areas:
 	its performance, its user experience or usability and its Generative Design capability.
 	
-	\paragraph{Performance}
-	The performance of the editing environment will be evaluated using \ac{gd} programs as benchmarks which will be run in it as well as in other systems, like Rosetta.
-	With the results of these benchmarks we can compare how does the system stand among the other in terms of running programs.
-	We can also measure its memory footprint and its performance when viewing program results.
-	
 	\paragraph{User experience / Usability}
 	For the system to be useful its users have to be able to use it.
 	To assess that this is true we will do user testing.
@@ -732,9 +727,15 @@
 	Only the editing environment will be tested this way since it is the only component that is used directly by architects.
 	
 	\paragraph{Generative Design capability}
-	The variety of results that can be made using the system are also important for its evaluation.
+	The variety of results that can be made using the system is also important for its evaluation.
 	The more \ac{gd} examples it can produce the better it is suited for use in a real-world scenario.
 	A way to show how much variety of results it can make is to describe several examples that give glimpses of that variety.
+	
+	\paragraph{Performance}
+	The performance of the editing environment will be evaluated using \ac{gd} programs as benchmarks which will be run in it as well as in other systems, like Rosetta.
+	With the results of these benchmarks we can compare how does the system stand among the others in terms of running programs.
+	We can also measure its memory footprint and its performance when viewing program results.
+	\textbf{responsiveness}
 
 \subsection{Proof-of-concept Prototype}
 	A small prototype has been assembled to test the concept of a \ac{gd} environment in the browser.
@@ -801,9 +802,9 @@
 %NAVconclusions
 \section{Conclusions}
 	Through this report we have stated that a new \ac{ide} for \ac{gd} needs to be developed.
-	We added that such an \ac{ide} is needed because regular \ac{ide}s for software development don't fit the needs of architects and also that it needs to be in the web to allow them to have more freedom from location or machine.
+	We added that such an \ac{ide} is needed because regular \ac{ide}s for software development don't fit the needs of architects, \emph{namely...}, and also that it needs to be in the web to allow them to have more freedom from location or machine.
 	
-	We used Impromptu, IPython, Processing, DesignScript and Rosetta as examples of \ac{ide}s that acknowledge this need and pointed them as guides for what or \ac{ide} should be.
+	We used Impromptu, IPython, Processing, DesignScript and Rosetta as examples of \ac{ide}s that acknowledge this need and pointed them as guides for what or \ac{ide} for \ac{gd} should be.
 	To complement these examples we also referred Learnable Programming's advice on what an \ac{ide} should do.
 	
 	We support the move to the web with examples (LightTable and OpenJSCAD) that show capable applications running in the web browser.
