Processing: Simplified the sample Processing code listing.

--- a/report.tex
+++ b/report.tex
@@ -315,7 +315,8 @@
 	A static sketch produces a static image while a dynamic sketch produces a series of images. 
 	A dynamic sketch includes at least a list instructions of what to do to draw each image; it can also include instructions of what to do to respond to input from the viewer of the \emph{sketch}.
 	
-	\begin{lstlisting}[caption={A simple Processing sketch},label={lst:simple:processing},language=Java]
+	\lstset{basicstyle=\ttfamily,breaklines=true}
+	\begin{lstlisting}[caption={A simple Processing sketch.},label={lst:simple:processing}]
 	//Hello mouse.
 	void setup() {
 		size(400, 400);
