--- a/report.tex
+++ b/report.tex
@@ -733,10 +733,12 @@
 	A way to show how much variety of results it can make is to describe several examples that give glimpses of that variety.
 	
 	\paragraph{Performance}
-	The performance of the editing environment will be evaluated using \ac{gd} programs as benchmarks which will be run in it as well as in other systems, like Rosetta.
-	With the results of these benchmarks we can compare how does the system stand among the others in terms of running programs.
-	We can also measure its memory footprint and its performance when viewing program results.
-	\textbf{responsiveness}
+	The performance will have to be evaluated but more importantly its perceived performance, or responsiveness, will also be evaluated.
+	As the \ac{ide} will be used by people, it is important that the interface responds quickly;
+	in this case it will matter how much time it takes to see the changes made to a program appear on a view of its results.
+	
+	Performance will be evaluated by benchmarks to compare our solution against other \ac{gd} \ac{ide}s and also by measuring the frame rate of the viewer.
+	The first measures raw performance and the second measures responsiveness.
 
 \subsection{Proof-of-concept Prototype}
 	A small prototype has been assembled to test the concept of a \ac{gd} environment in the browser.
