--- a/report.tex
+++ b/report.tex
@@ -209,7 +209,7 @@
 	What \ac{ide}s don't do is to decrease the amount of knowledge that their users have to have about software development.
 	The tools they provide are still the same that developers would use.
 	This is a problem that new software developers face and have to cope with.
-	Even with this problem, the gain software developers get when they know how to use \ac{ide}s outweighs it and so \ac{ide}s are popular among software developers.
+	Even with this problem, the benefit software developers get when they know how to use \ac{ide}s outweighs it and so \ac{ide}s are popular among software developers.
 
 	Bringing more success to software developers makes one wonder whether \ac{ide}s can do the same to people programming for other purposes, such as \ac{gd}.
 	It is not as simple as showing the \ac{ide} to those people and hoping they will know how to use it.
