Conclusions: Second version...

--- a/report.tex
+++ b/report.tex
@@ -804,17 +804,28 @@
 %----------------------------------------------------
 %NAVconclusions
 \section{Conclusions}
-	Through this report we have stated that a new \ac{ide} for \ac{gd} needs to be developed.
-	We added that such an \ac{ide} is needed because regular \ac{ide}s for software development don't fit the needs of architects, \emph{namely...}, and also that it needs to be in the web to allow them to have more freedom from location or machine.
+	People making \ac{gd} need an \ac{ide} that is different from those used in software development. 
+	They do not want to make programs like those of software development nor do they have the knowledge required to be able to do it.
 	
-	We used Impromptu, IPython, Processing, DesignScript and Rosetta as examples of \ac{ide}s that acknowledge this need and pointed them as guides for what or \ac{ide} for \ac{gd} should be.
-	To complement these examples we also referred Learnable Programming's advice on what an \ac{ide} should do.
+	\ac{ide}s like Impromptu, IPython, Processing, DesignScript and Rosetta are examples of \ac{ide}s for programming for purposes other than software development.
+	They drop most of the functionality from software development \ac{ide}s (like Visual Studio or Eclipse) keeping only what is useful for beginners and add new functionality that will help them while programming for their specific purposes.
 	
-	We support the move to the web with examples (LightTable and OpenJSCAD) that show capable applications running in the web browser.
+	With the current state of web browsers it has become possible to host applications inside web pages. 
+	Applications that in the past could only be executed by running a native executable can now be moved to web pages.
+	LightTable and OpenJSCAD are examples of it.
 	
-	To present our solution, we started by decomposing the problem of an \ac{ide} for \ac{gd} and later showed its high-level view.
+	With the need for a different \ac{ide} for people doing \ac{gd} and the possibility of running applications in the browser, we proposed that having such an \ac{ide} in the web browser can give more flexibility to people making \ac{gd}.
 	
-	We said that the evaluation will focus on performance, user experience and \ac{gd} capability of the system and also that a partial prototype was already built and demoed where architects' response was good.
+	To have a working \ac{ide} for \ac{gd} in the browser there need to be at least two components, a source code editor and a results visualizer.
+	This way people will be able to make programs and see their results with just a web browser.
+	
+	Special care will have to be taken to make sure that the user experience is good. 
+	A particular element in making it is the overall responsiveness of the user interface.
+	
+	
+	
+	When the IDE is working (after the code editor and results visualizer are done) there is still room for more.
+	Things like a backend for running programs in CADs and storing programs in the cloud may be implemented...
 	
 %----------------------------------------------------
 %NAVappendix
