Conclusions: More text and the start of an hint on future work.

--- a/report.tex
+++ b/report.tex
@@ -805,27 +805,27 @@
 %NAVconclusions
 \section{Conclusions}
 	People making \ac{gd} need an \ac{ide} that is different from those used in software development. 
-	They do not want to make programs like those of software development nor do they have the knowledge required to be able to do it.
+	Most of the time their programming projects are much simpler than the typical software development project.
+	They also don't have as much programming knowledge as software developers.
+	With this in mind it becomes clear that software development \ac{ide}s don't fit their needs.
 	
-	\ac{ide}s like Impromptu, IPython, Processing, DesignScript and Rosetta are examples of \ac{ide}s for programming for purposes other than software development.
+	\ac{ide}s like Impromptu, IPython, Processing, DesignScript and Rosetta are examples of \ac{ide}s for programming purposes other than software development.
 	They drop most of the functionality from software development \ac{ide}s (like Visual Studio or Eclipse) keeping only what is useful for beginners and add new functionality that will help them while programming for their specific purposes.
 	
 	With the current state of web browsers it has become possible to host applications inside web pages. 
 	Applications that in the past could only be executed by running a native executable can now be moved to web pages.
 	LightTable and OpenJSCAD are examples of it.
 	
-	With the need for a different \ac{ide} for people doing \ac{gd} and the possibility of running applications in the browser, we proposed that having such an \ac{ide} in the web browser can give more flexibility to people making \ac{gd}.
+	With the need for a different \ac{ide} for people doing \ac{gd} and the possibility of running applications in the browser, it is not only possible to build an \ac{ide} for \ac{gd} in the web browser but it is also advantageous for users.
+	With it, they can quickly open up a web browser on its web page, start to write down their \ac{gd} ideas and immediately run them.
 	
 	To have a working \ac{ide} for \ac{gd} in the browser there need to be at least two components, a source code editor and a results visualizer.
 	This way people will be able to make programs and see their results with just a web browser.
 	
 	Special care will have to be taken to make sure that the user experience is good. 
-	A particular element in making it is the overall responsiveness of the user interface.
+	A particular element in making it is the overall responsiveness of the user interface and other is the amount of primitives available for \ac{gd}.
 	
-	
-	
-	When the IDE is working (after the code editor and results visualizer are done) there is still room for more.
-	Things like a backend for running programs in CADs and storing programs in the cloud may be implemented...
+	In the future, a solution for storing the programs users make and for running them in \ac{cad}s may be explored.
 	
 %----------------------------------------------------
 %NAVappendix
