Report: Cleanup + OpenJSCAD reference.

--- a/report.bib
+++ b/report.bib
@@ -186,3 +186,10 @@ year = {2012}
 	year={2010},
 	publisher={IEEE}
 }
+@misc{openjscad2015site,
+	author = "René K. Muller",
+	title = "OpenJSCAD.org",
+	year = "2015",
+	url = "\url{http://openjscad.org/}",
+	note = "[Online; accessed 20-November-2015]"
+}
