Bibliography: More entries.

--- a/report.bib
+++ b/report.bib
@@ -118,11 +118,11 @@ year = {2013}
 }
 @book{terzidis2003expressive,
 annote = {Acerca de Generative Design.},
-author = {Terzidis, Kostas.},
+author = {Kostas Terzidis},
 isbn = {0-415-31744-4},
 keywords = {Form;Computation;Generative Process},
 publisher = {Taylor \& Francis},
-title = {{\{E\}xpressive form: \{A\} conceptual approach to computational design / \{K\}ostas \{T\}erzidis}},
+title = {{Expressive form: A conceptual approach to computational design}},
 year = {2003}
 }
 @book{Maeda:2001:DN:559503,
@@ -191,5 +191,32 @@ year = {2012}
 	title = "OpenJSCAD.org",
 	year = "2015",
 	url = "\url{http://openjscad.org/}",
+	note = "[Online; accessed 20-November-2015]"
+}
+@misc{eclipse2007eclipse,
+	title={{Eclipse IDE}},
+	author={Eclipse Foundation},
+	howpublished={Retrieved from \url{http://eclipse.org}},
+	year={2015}
+}
+@misc{mvs2002mvs,
+	title={{Microsoft Visual Studio IDE}},
+	author={Microsoft},
+	howpublished={retrieved from \url{http://visualstudio.com}},
+	year={2015}
+}
+@inproceedings{houston2013clara,
+	title={Clara. io: full-featured 3D content creation for the web and cloud era},
+	author={Houston, Ben and Larsen, Wayne and Larsen, Bryan and Caron, Jack and Nikfetrat, Nima and Leung, Catherine and Silver, Jesse and Kamal-Al-Deen, Hasan and Callaghan, Peter and Chen, Roy and others},
+	booktitle={ACM SIGGRAPH 2013 Studio Talks},
+	pages={8},
+	year={2013},
+	organization={ACM}
+}
+@misc{goocreate2015site,
+	author = "Goo Technologies",
+	title = "GooCreate.com",
+	year = "2015",
+	url = "\url{http://goocreate.com/}",
 	note = "[Online; accessed 20-November-2015]"
 }
